--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="white-text-container section-container">
     <div class="text-center">
       <h1>I am Naman Mathur</h1>
-      <p>Graphics Designer and Developer</p>
+      <p> Developement and Technologies</p>
       <p>
         <a class="fa-icon fa-icon-2x" href="https://instagram.com/naman__mathur" title="">
           <i class="fa fa-instagram"></i>
@@ -78,14 +78,19 @@
             <h2>Projects</h2>
             <div class="row">
               <div class="col-md-4">
+                <img src="./assets/images/img-04.jpg" class="img-responsive" alt="">
+                <h3 class="h5">Login Authentication</h3>
+                <p>User authentication verifies the identity of a user attempting to gain access to a network or computing resource by authorizing a human-to-machine transfer of credentials during interactions on a network to confirm a user's authenticity.</p>
+              </div>
+              <div class="col-md-4">
                 <img src="./assets/images/img-02.png" class="img-responsive" alt="">
-                <h3 class="h5">Docker Project</h3>
+                <br><br><br><br><br><h3 class="h5">Docker Project</h3>
                 <p>This is the final Docker project made with Docker Compose based on Red hat Linux-8 operating system as host. My project uses “Infrastructure as a Code” i.e. “Docker Compose” to launch a fully working webapp like Joomla set up in one go.</p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
                 <h3 class="h5">Website and Logo Design</h3>
-                <p>It is the front end designing of the professionnal website including all the designing and graphics part like logo.</p>
+                <p>It is the front end designing of the professionnal website using frameworks like Bootstrap and React including all the designing and graphics parts.</p>
               </div>
             </div>
           </div>
@@ -95,11 +100,18 @@
           <div class="card-block">
             <h2>Work</h2>
             <div class="work-experience">
-              <small class="date">2020-present</small>
-              <h3 class="h5 date-title">Graphic Designer- <a href="https://www.rietjaipur.ac.in/" title="Create professionnal website">College Technical and Cultural Clubs</a></h3>
+              <small class="date">2020</small>
+              <h3 class="h5 date-title">Professional Website</h3>
               
 
-              <p>Incharge of handling all sort of graphical works including designing in Figma or creating contents like posters logos or cards etc in Adobe illustrator, photoshop and xd. </p>
+              <p>We team of 4-5 people are working on building a website whose main aim is to provide free education to all.</p>
+            </div>
+            <div class="work-experience">
+              <small class="date">2019-present</small>
+              <h3 class="h5 date-title">Developing and Designing- <a href="https://www.rietjaipur.ac.in/" title="Create professionnal website">College Technical and Cultural Clubs</a></h3>
+              
+
+              <p>Incharge of handling all sort of Development and Graphical works including working on Website and Application developement with the help of javascript and frameworks like Bootstrap and react frameworks or creating graphical contents in Adobe illustrator, photoshop and xd. </p>
             </div>
           </div>
         </div>
